bsComp/bs/bs_common/antlr/bsParser.cpp

// Generated from bs.g4 by ANTLR 4.13.1


#include "bsListener.h"
#include "bsVisitor.h"

#include "bsParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BsParserStaticData final {
  BsParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BsParserStaticData(const BsParserStaticData&) = delete;
  BsParserStaticData(BsParserStaticData&&) = delete;
  BsParserStaticData& operator=(const BsParserStaticData&) = delete;
  BsParserStaticData& operator=(BsParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag bsParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
BsParserStaticData *bsParserStaticData = nullptr;

void bsParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (bsParserStaticData != nullptr) {
    return;
  }
#else
  assert(bsParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BsParserStaticData>(
    std::vector<std::string>{
      "program", "declaration", "typedef", "global", "function", "params", 
      "param_decl", "block", "statement", "var_decl", "array_decl", "array_initializer", 
      "init_element", "goto_label", "compound", "if", "ifelse", "while", 
      "for1", "for2", "goto", "goto_if", "return", "break", "continue", 
      "expr", "args", "type", "udef_type", "alignment"
    },
    std::vector<std::string>{
      "", "';'", "'='", "'('", "')'", "','", "'{'", "'}'", "'['", "']'", 
      "':'", "'++'", "'--'", "'<'", "'>'", "'&'", "'~'", "'!'", "'*'", "'/'", 
      "'%'", "'>>'", "'<<'", "'>='", "'<='", "'=='", "'!='", "'^'", "'|'", 
      "'&&'", "'||'", "'+='", "'-='", "'*='", "'/='", "'%='", "'<<='", "'>>='", 
      "'&='", "'^='", "'|='", "'byte'", "'char'", "'int'", "", "'uchar'", 
      "'uint'", "'goto'", "'if'", "'else'", "'while'", "'for'", "'return'", 
      "'break'", "'continue'", "'static'", "'reinterpret_cast'", "'from'", 
      "'to'", "'typedef'", "", "", "'+'", "'-'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "BYTE_t", "CHAR_t", "INT_t", "UBYTE_t", 
      "UCHAR_t", "UINT_t", "GOTO", "IF", "ELSE", "WHILE", "FOR", "RETURN", 
      "BREAK", "CONTINUE", "STATIC", "REINTERPRET_CAST", "FROM", "TO", "TYPEDEF", 
      "FN", "ALIGN", "PLUS", "MINUS", "ID", "CHAR", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", 
      "UNSIGNED_INT", "SIGNED_INT", "Newline", "Whitespace", "BlockComment", 
      "LineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  bsParserStaticData = staticData.release();
}

}

bsParser::bsParser(TokenStream *input) : bsParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

bsParser::bsParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  bsParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *bsParserStaticData->atn, bsParserStaticData->decisionToDFA, bsParserStaticData->sharedContextCache, options);
}

bsParser::~bsParser() {
  delete _interpreter;
}

const atn::ATN& bsParser::getATN() const {
  return *bsParserStaticData->atn;
}

std::string bsParser::getGrammarFileName() const {
  return "bs.g4";
}

const std::vector<std::string>& bsParser::getRuleNames() const {
  return bsParserStaticData->ruleNames;
}

const dfa::Vocabulary& bsParser::getVocabulary() const {
  return bsParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView bsParser::getSerializedATN() const {
  return bsParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

bsParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bsParser::ProgramContext::EOF() {
  return getToken(bsParser::EOF, 0);
}

std::vector<bsParser::DeclarationContext *> bsParser::ProgramContext::declaration() {
  return getRuleContexts<bsParser::DeclarationContext>();
}

bsParser::DeclarationContext* bsParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<bsParser::DeclarationContext>(i);
}


size_t bsParser::ProgramContext::getRuleIndex() const {
  return bsParser::RuleProgram;
}

void bsParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void bsParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any bsParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

bsParser::ProgramContext* bsParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, bsParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 41) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 41)) & 8650815) != 0)) {
      setState(60);
      declaration();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(bsParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

bsParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bsParser::GlobalContext* bsParser::DeclarationContext::global() {
  return getRuleContext<bsParser::GlobalContext>(0);
}

bsParser::FunctionContext* bsParser::DeclarationContext::function() {
  return getRuleContext<bsParser::FunctionContext>(0);
}

bsParser::TypedefContext* bsParser::DeclarationContext::typedef_() {
  return getRuleContext<bsParser::TypedefContext>(0);
}


size_t bsParser::DeclarationContext::getRuleIndex() const {
  return bsParser::RuleDeclaration;
}

void bsParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void bsParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


std::any bsParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

bsParser::DeclarationContext* bsParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, bsParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(68);
      global();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(69);
      function();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(70);
      typedef_();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypedefContext ------------------------------------------------------------------

bsParser::TypedefContext::TypedefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bsParser::TypedefContext::TYPEDEF() {
  return getToken(bsParser::TYPEDEF, 0);
}

bsParser::TypeContext* bsParser::TypedefContext::type() {
  return getRuleContext<bsParser::TypeContext>(0);
}

tree::TerminalNode* bsParser::TypedefContext::ID() {
  return getToken(bsParser::ID, 0);
}


size_t bsParser::TypedefContext::getRuleIndex() const {
  return bsParser::RuleTypedef;
}

void bsParser::TypedefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypedef(this);
}

void bsParser::TypedefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypedef(this);
}


std::any bsParser::TypedefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitTypedef(this);
  else
    return visitor->visitChildren(this);
}

bsParser::TypedefContext* bsParser::typedef_() {
  TypedefContext *_localctx = _tracker.createInstance<TypedefContext>(_ctx, getState());
  enterRule(_localctx, 4, bsParser::RuleTypedef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(bsParser::TYPEDEF);
    setState(74);
    type();
    setState(75);
    match(bsParser::ID);
    setState(76);
    match(bsParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalContext ------------------------------------------------------------------

bsParser::GlobalContext::GlobalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bsParser::Udef_typeContext* bsParser::GlobalContext::udef_type() {
  return getRuleContext<bsParser::Udef_typeContext>(0);
}

tree::TerminalNode* bsParser::GlobalContext::ID() {
  return getToken(bsParser::ID, 0);
}

bsParser::Init_elementContext* bsParser::GlobalContext::init_element() {
  return getRuleContext<bsParser::Init_elementContext>(0);
}


size_t bsParser::GlobalContext::getRuleIndex() const {
  return bsParser::RuleGlobal;
}

void bsParser::GlobalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobal(this);
}

void bsParser::GlobalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobal(this);
}


std::any bsParser::GlobalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitGlobal(this);
  else
    return visitor->visitChildren(this);
}

bsParser::GlobalContext* bsParser::global() {
  GlobalContext *_localctx = _tracker.createInstance<GlobalContext>(_ctx, getState());
  enterRule(_localctx, 6, bsParser::RuleGlobal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    udef_type();
    setState(79);
    match(bsParser::ID);
    setState(80);
    match(bsParser::T__1);
    setState(81);
    init_element();
    setState(82);
    match(bsParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

bsParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bsParser::Udef_typeContext* bsParser::FunctionContext::udef_type() {
  return getRuleContext<bsParser::Udef_typeContext>(0);
}

tree::TerminalNode* bsParser::FunctionContext::ID() {
  return getToken(bsParser::ID, 0);
}

bsParser::BlockContext* bsParser::FunctionContext::block() {
  return getRuleContext<bsParser::BlockContext>(0);
}

bsParser::ParamsContext* bsParser::FunctionContext::params() {
  return getRuleContext<bsParser::ParamsContext>(0);
}


size_t bsParser::FunctionContext::getRuleIndex() const {
  return bsParser::RuleFunction;
}

void bsParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void bsParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}


std::any bsParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

bsParser::FunctionContext* bsParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 8, bsParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    udef_type();
    setState(85);
    match(bsParser::ID);
    setState(86);
    match(bsParser::T__2);
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((((_la - 41) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 41)) & 8388671) != 0)) {
      setState(87);
      params();
    }
    setState(90);
    match(bsParser::T__3);
    setState(91);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamsContext ------------------------------------------------------------------

bsParser::ParamsContext::ParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bsParser::Param_declContext *> bsParser::ParamsContext::param_decl() {
  return getRuleContexts<bsParser::Param_declContext>();
}

bsParser::Param_declContext* bsParser::ParamsContext::param_decl(size_t i) {
  return getRuleContext<bsParser::Param_declContext>(i);
}


size_t bsParser::ParamsContext::getRuleIndex() const {
  return bsParser::RuleParams;
}

void bsParser::ParamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParams(this);
}

void bsParser::ParamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParams(this);
}


std::any bsParser::ParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitParams(this);
  else
    return visitor->visitChildren(this);
}

bsParser::ParamsContext* bsParser::params() {
  ParamsContext *_localctx = _tracker.createInstance<ParamsContext>(_ctx, getState());
  enterRule(_localctx, 10, bsParser::RuleParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    param_decl();
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == bsParser::T__4) {
      setState(94);
      match(bsParser::T__4);
      setState(95);
      param_decl();
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_declContext ------------------------------------------------------------------

bsParser::Param_declContext::Param_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bsParser::Udef_typeContext* bsParser::Param_declContext::udef_type() {
  return getRuleContext<bsParser::Udef_typeContext>(0);
}

tree::TerminalNode* bsParser::Param_declContext::ID() {
  return getToken(bsParser::ID, 0);
}


size_t bsParser::Param_declContext::getRuleIndex() const {
  return bsParser::RuleParam_decl;
}

void bsParser::Param_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam_decl(this);
}

void bsParser::Param_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam_decl(this);
}


std::any bsParser::Param_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitParam_decl(this);
  else
    return visitor->visitChildren(this);
}

bsParser::Param_declContext* bsParser::param_decl() {
  Param_declContext *_localctx = _tracker.createInstance<Param_declContext>(_ctx, getState());
  enterRule(_localctx, 12, bsParser::RuleParam_decl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    udef_type();
    setState(102);
    match(bsParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

bsParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bsParser::StatementContext *> bsParser::BlockContext::statement() {
  return getRuleContexts<bsParser::StatementContext>();
}

bsParser::StatementContext* bsParser::BlockContext::statement(size_t i) {
  return getRuleContext<bsParser::StatementContext>(i);
}


size_t bsParser::BlockContext::getRuleIndex() const {
  return bsParser::RuleBlock;
}

void bsParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void bsParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any bsParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

bsParser::BlockContext* bsParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 14, bsParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(bsParser::T__5);
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -4504164776346937016) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 23) != 0)) {
      setState(105);
      statement();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(111);
    match(bsParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

bsParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bsParser::Var_declContext* bsParser::StatementContext::var_decl() {
  return getRuleContext<bsParser::Var_declContext>(0);
}

bsParser::Array_declContext* bsParser::StatementContext::array_decl() {
  return getRuleContext<bsParser::Array_declContext>(0);
}

bsParser::ExprContext* bsParser::StatementContext::expr() {
  return getRuleContext<bsParser::ExprContext>(0);
}

bsParser::Goto_labelContext* bsParser::StatementContext::goto_label() {
  return getRuleContext<bsParser::Goto_labelContext>(0);
}

bsParser::CompoundContext* bsParser::StatementContext::compound() {
  return getRuleContext<bsParser::CompoundContext>(0);
}

bsParser::IfContext* bsParser::StatementContext::if_() {
  return getRuleContext<bsParser::IfContext>(0);
}

bsParser::IfelseContext* bsParser::StatementContext::ifelse() {
  return getRuleContext<bsParser::IfelseContext>(0);
}

bsParser::WhileContext* bsParser::StatementContext::while_() {
  return getRuleContext<bsParser::WhileContext>(0);
}

bsParser::For1Context* bsParser::StatementContext::for1() {
  return getRuleContext<bsParser::For1Context>(0);
}

bsParser::For2Context* bsParser::StatementContext::for2() {
  return getRuleContext<bsParser::For2Context>(0);
}

bsParser::GotoContext* bsParser::StatementContext::goto_() {
  return getRuleContext<bsParser::GotoContext>(0);
}

bsParser::Goto_ifContext* bsParser::StatementContext::goto_if() {
  return getRuleContext<bsParser::Goto_ifContext>(0);
}

bsParser::ReturnContext* bsParser::StatementContext::return_() {
  return getRuleContext<bsParser::ReturnContext>(0);
}

bsParser::BreakContext* bsParser::StatementContext::break_() {
  return getRuleContext<bsParser::BreakContext>(0);
}

bsParser::ContinueContext* bsParser::StatementContext::continue_() {
  return getRuleContext<bsParser::ContinueContext>(0);
}


size_t bsParser::StatementContext::getRuleIndex() const {
  return bsParser::RuleStatement;
}

void bsParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void bsParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bsListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any bsParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bsVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

bsParser::StatementContext* bsParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 16, bsParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(130);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(113);
      var_decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(114);
      array_decl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(115);
      expr(0);
      setState(116);
      match(bsParser::T__0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(118);
      goto_label();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(119);
      compound();
      break;
    }
